--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+// AQUÍ SI MODIFIQUEN SI QUIEREN, SON TABLAS CON SU NÚMERO DE CONTROL, NOMÁS NO SE PASEN PORQUE EL ESQUELETO NO FUNCIONA.
+
 <!DOCTYPE html>
 <html>
 <head>
